# usb_logger_demo

./: .gitignore  Cargo.toml  Memory.x  build.rs  justfile  shell.nix  usb_logger_demo.uf2
.cargo/: config.toml
src/: adxl314(Ruhaan).rs  adxl314.rs  bma530.rs  bmp585.rs  iis2mdc.rs  main.rs
